...
                android:background="@drawable/my_drawable"
                android:paddingVertical="3dp">

            </TextView>

            <TextView
                android:id="@+id/browseImagesBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Images"
                android:textSize="28sp"
                android:background="@drawable/my_drawable"
                android:paddingVertical="3dp">
...
